Fixed issue with collapse icon appearing in Backstage Fixed issue with menu items not working

--- a/research/ngRibbon.css
+++ b/research/ngRibbon.css
@@ -248,6 +248,7 @@ ng-ribbon .ribbon ng-ribbon-backstage {
     right: 0;
     background-color: white;
     display: none;
+    z-index: 990;
 }
 
 ng-ribbon .ribbon.backstage-open ng-ribbon-backstage {
